# f3dx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
_subtree_cache/: .gitignore  SECURITY.md
_subtree_cache/.github/workflows/: ci.yml  release.yml
_subtree_cache/crates/f3dx-cache/: Cargo.toml
_subtree_cache/crates/f3dx-replay/: Cargo.toml
_subtree_cache/python/f3dx_cache/: __init__.py
_subtree_router/: pyproject.toml
bench/: bench_anthropic_streaming.py  bench_concurrent.py  bench_day1.py  bench_loop.py  bench_streaming.py  f3dx_test_server.py  mock_anthropic_server.py  mock_mcp_sampling_server.py  mock_openai_json_server.py  mock_openai_server.py  mock_openai_tool_server.py  verify_anthropic_compat.py  verify_assembled.py  verify_atlas_rtc.py  verify_auto_attach.py  verify_bench_sdk.py  verify_capture_messages.py  verify_compat.py  verify_dogfood_tracewright.py  verify_langchain.py  verify_mcp.py  verify_mcp_http.py  verify_mcp_sampling.py  verify_mcp_server.py  verify_otel.py  verify_otel_http.py  verify_panic_hook.py  verify_parquet.py  verify_parquet_live.py  verify_pydantic_ai.py  verify_schema_validation.py  verify_token_counts.py  verify_traces.py  verify_validate_prefix.py  verify_validated.py  verify_vigil.py
bench/fixtures/: compose_target.txt  openai.redb  tool_cache.redb
crates/agx-http/: Cargo.toml
crates/agx-http/src/: anthropic.rs  lib.rs  openai.rs  request.rs  response.rs  stream.rs
crates/agx-py/: Cargo.toml
crates/agx-py/src/: lib.rs
crates/agx-rt/: Cargo.toml
crates/agx-rt/src/: lib.rs
crates/agx-trace/: Cargo.toml
crates/agx-trace/src/: lib.rs
crates/f3dx-cache-py/: Cargo.toml
crates/f3dx-cache-py/src/: lib.rs
crates/f3dx-cache/src/: lib.rs
crates/f3dx-http/: Cargo.toml
crates/f3dx-http/src/: anthropic.rs  lib.rs  openai.rs  otel.rs  response.rs  stream.rs
crates/f3dx-mcp/: Cargo.toml
crates/f3dx-mcp/src/: lib.rs
crates/f3dx-py/: Cargo.toml
crates/f3dx-py/src/: cache.rs  lib.rs  router.rs
crates/f3dx-replay/src/: lib.rs
crates/f3dx-rt/: Cargo.toml
crates/f3dx-rt/src/: lib.rs
crates/f3dx-trace/: Cargo.toml
crates/f3dx-trace/src/: lib.rs
docs/workflows/: real_api_benches.md
examples/: budget_real_api_bench.py  cache_real_api_bench.py  cache_smoke.py  f3dx_fast_compose_real_api_bench.py  f3dx_fast_vs_baseline_real_api_bench.py  prefix_cache_trick_dead_real_api.py  prompt_canonical_real_api_bench.py  router_real_api_bench.py  smoke.py  spec_tool_real_api_bench.py  tool_cache_real_bench.py
python/agx/: __init__.py
python/f3dx/: __init__.py
python/f3dx/analytics/: __init__.py  _parquet.py
python/f3dx/atlas_rtc/: __init__.py  _wrap.py
python/f3dx/bench/: __init__.py
python/f3dx/cache/: __init__.py  tools.py
python/f3dx/compat/: __init__.py  _async_anthropic.py  _async_openai.py  _openai.py
python/f3dx/fast/: __init__.py  budget.py  prompt.py  spec_tool.py
python/f3dx/langchain/: __init__.py  _chat_openai.py
python/f3dx/pydantic_ai/: __init__.py  _capability.py  _models.py
python/f3dx/router/: __init__.py
python/f3dx/vigil/: __init__.py  _bridge.py
python/f3dx_cache/: pytest_plugin.py
src/: lib.rs
