[workspace]
resolver = "2"
members = ["crates/f3dx-py", "crates/f3dx-rt", "crates/f3dx-http", "crates/f3dx-trace"]

[workspace.package]
version = "0.0.4"
edition = "2024"
authors = ["Federico Coccoli <fed1@f3d1.dev>"]
description = "Rust runtime for Python AI apps. Drop-in for openai/anthropic SDKs."
license = "MIT"
repository = "https://github.com/smigolsmigol/f3dx"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
bytes = "1.10"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
print_stdout = "allow"
print_stderr = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
inherits = "release"
