[workspace]
resolver = "2"
members = ["crates/f3dx-py", "crates/f3dx-rt", "crates/f3dx-http", "crates/f3dx-trace", "crates/f3dx-mcp", "crates/f3dx-cache", "crates/f3dx-replay"]

[workspace.package]
version = "0.0.17"
edition = "2024"
authors = ["Federico Benini <smigolsmigol@protonmail.com>"]
description = "Rust runtime for Python AI apps. Drop-in for openai/anthropic SDKs."
license = "MIT"
repository = "https://github.com/smigolsmigol/f3dx"

[workspace.dependencies]
# Phase A consolidation prereq (2026-04-29): bumped from 0.24 to =0.28.3
# (exact pin). This unblocks wata Phase 0.5 (wata core needs >= 0.28
# for arrow-pyarrow 58.x). Exact pin makes resolution deterministic
# when f3dx-cache + f3dx-router get consolidated as workspace members.
pyo3 = { version = "=0.28.3", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
bytes = "1.10"
# Phase B consolidation deps (from f3dx-cache subtree merge, 2026-04-30):
redb = "2.2"
blake3 = "1.5"
thiserror = "1.0"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
print_stdout = "allow"
print_stderr = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
inherits = "release"
