[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "f3dx"
version = "0.0.6"
description = "Rust runtime for Python AI apps. Drop-in for openai/anthropic SDKs with native SSE streaming, an agent loop with concurrent tool dispatch, and Logfire-compatible OTel emission."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Federico Coccoli", email = "fed1@f3d1.dev" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai-compat = [
    "openai>=1.50",
]
anthropic-compat = [
    "anthropic>=0.40",
]
pydantic-ai = [
    "pydantic-ai>=1.87",
    "openai>=1.50",
    "anthropic>=0.40",
]
langchain = [
    "langchain-openai>=1.0",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "maturin>=1.13",
    "openai>=1.50",
    "anthropic>=0.40",
]

[tool.maturin]
manifest-path = "crates/f3dx-py/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "f3dx._f3dx"
python-source = "python"
