[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "f3dx"
version = "0.0.12"
description = "Rust runtime for Python AI apps. Drop-in for openai/anthropic SDKs with native SSE streaming, an agent loop with concurrent tool dispatch, and Logfire-compatible OTel emission."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai-compat = [
    "openai>=1.50",
]
arrow = [
    "pyarrow>=18.0",
]
atlas-rtc = [
    "atlas-rtc @ git+https://github.com/cruz209/ATLAS-RTC",
]
anthropic-compat = [
    "anthropic>=0.40",
]
pydantic-ai = [
    "pydantic-ai>=1.87",
    "openai>=1.50",
    "anthropic>=0.40",
]
langchain = [
    "langchain-openai>=1.0",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "maturin>=1.13",
    "openai>=1.50",
    "anthropic>=0.40",
]

[tool.maturin]
manifest-path = "crates/f3dx-py/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "f3dx._f3dx"
python-source = "python"
