[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "f3dx"
version = "0.0.19"
description = "Rust runtime for Python AI apps. Drop-in for openai/anthropic SDKs with native SSE streaming, an agent loop with concurrent tool dispatch, and Logfire-compatible OTel emission."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai-compat = [
    "openai>=1.50",
]
arrow = [
    "pyarrow>=18.0",
]
cache = [
    # f3dx.cache - content-addressable LLM response cache, redb + JCS + BLAKE3.
    # The Rust core ships in the f3dx wheel; this extra exists as a
    # documentation pointer. Consolidated from smigolsmigol/f3dx-cache in
    # Phase B of the f3d1 repo consolidation (2026-04-30). Use:
    #   pip install f3dx[cache]
    #   from f3dx.cache import Cache
]
router = [
    # f3dx.router - in-process Rust router for LLM providers, sequential
    # + hedged-parallel policies, sub-1ms hot-swap on 429/5xx. Same Phase B
    # consolidation as cache. Use:
    #   pip install f3dx[router]
    #   from f3dx.router import Router
]
atlas-rtc = [
    # atlas-rtc isn't on PyPI yet (cruz209/ATLAS-RTC is github-only). PyPI
    # rejects packages with direct-url dependencies in extras, so the user
    # installs it separately:
    #   pip install f3dx[atlas-rtc]
    #   pip install "atlas-rtc @ git+https://github.com/cruz209/ATLAS-RTC"
    # This extra exists as a documentation pointer; the import-time error
    # in f3dx.atlas_rtc names the same install command.
]
vigil = [
    # VIGIL ships as a project scaffold (cruz209/V.I.G.I.L). The bridge
    # f3dx ships here is dependency-free at runtime - VIGIL doesn't have
    # to be importable. Keep this extra as a documentation pointer.
]
bench = [
    # f3dx.bench - opt-in telemetry to f3dx-bench dashboard. Pure stdlib;
    # no runtime deps. Extra exists so users have a discoverable surface:
    #   pip install f3dx[bench]
    #   F3DX_BENCH_OPTIN=1 python my_agent.py
    # See docs at https://github.com/smigolsmigol/f3dx-bench
]
anthropic-compat = [
    "anthropic>=0.40",
]
pydantic-ai = [
    "pydantic-ai>=1.87",
    "openai>=1.50",
    "anthropic>=0.40",
]
langchain = [
    "langchain-openai>=1.0",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "maturin>=1.13",
    "openai>=1.50",
    "anthropic>=0.40",
]

[tool.maturin]
manifest-path = "crates/f3dx-py/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "f3dx._f3dx"
python-source = "python"
