[package]
name = "agx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "agx LLM HTTP client: reqwest + native SSE + streaming JSON validation"
repository.workspace = true

[lib]
name = "agx_http"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
# Wired in week 1-2:
# reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json", "http2", "brotli", "gzip"] }
# tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
# eventsource-stream = "0.2"
# futures-util = "0.3"
