[package]
name = "agx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "agx LLM HTTP client: reqwest + native SSE + streaming JSON validation"
repository.workspace = true

[lib]
name = "agx_http"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "http2", "stream"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync"] }
futures-util = "0.3"
eventsource-stream = "0.2"
thiserror = "2.0"
