[package]
name = "f3dx-cache-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bridge for f3dx-cache + f3dx-replay (PyO3 abi3)."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
f3dx-cache-core = { package = "f3dx-cache", path = "../f3dx-cache" }
f3dx-replay = { path = "../f3dx-replay" }

[lints]
workspace = true
