[package]
name = "f3dx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "f3dx LLM HTTP client: reqwest + native SSE + streaming JSON validation"
repository.workspace = true

[lib]
name = "f3dx_http"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "http2", "stream"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync"] }
futures-util = "0.3"
eventsource-stream = "0.2"
thiserror = "2.0"
f3dx-trace = { path = "../f3dx-trace" }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
# Phase E V0.2: terminal-time schema validation. Streaming-incremental schema
# walk lands as V0.2.1 once the streaming JSON parser side is plumbed.
jsonschema = { version = "0.27", default-features = false }

[lints]
workspace = true
