[package]
name = "f3dx-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "f3dx Python bindings: bridges f3dx-rt + f3dx-http + f3dx-trace into a single PyO3 module"
repository.workspace = true

[lib]
name = "_f3dx"
crate-type = ["cdylib", "rlib"]

[dependencies]
f3dx-rt = { path = "../f3dx-rt" }
f3dx-http = { path = "../f3dx-http" }
f3dx-trace = { path = "../f3dx-trace" }
pyo3 = { workspace = true, features = ["extension-module"] }
