[package]
name = "f3dx-trace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "f3dx OpenTelemetry span emission. Logfire-compatible, gen_ai.* semconv."
repository.workspace = true

[lib]
name = "f3dx_trace"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
once_cell = "1.20"
